# ControlODESymulation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  documentation_plan.md  index.html  local-env.txt  pip_freeze_output.txt  pyproject.toml  refactoring_checklist.md  remote-env.txt  requirements-dev.txt  requirements.txt  search.json  setup.py  sitemap.xml  visual_test_control_plots.py  visual_test_phase_portrait.py  visual_test_trajectory_plotter.py
.github/: dependabot.yml
.github/workflows/: ci-complete.yml  ci-mypy.yml  ci-pytest.yml  ci.yml  publish-to-pypi.yml  quarto-publish.yml
api/: index.html  systems.base.core.ContinuousSystemBase.html  systems.builtin.deterministic.continuous.CartPole.html  systems.builtin.deterministic.continuous.SymbolicPendulum.html
architecture/: Control_Framework_Architecture.html  Delegation_Layer_Architecture.html  Integration_Framework_Architecture.html  Type_System_Architecture.html  UI_Framework_Architecture.html  Visualization_Framework_Architecture.html  cdesym_Design_Philosophy.html  index.html
bug_fix_documentation/: dynamics_evaluator_bug_fix_summary.html
docs/: ControlDESymulation_Design_Philosophy.md  _quarto.yml  dependency_analysis_phase_0_2.md  documentation_development_plan  index.qmd  objects.json  references.bib  type_system_reference.md
docs/_site/: index.html  robots.txt  search.json  sitemap.xml
docs/_site/api/: index.html  (+223 more)
docs/api/: ControlDESymulation_Design_Philosophy.md  control.ControlSynthesis.qmd  control.SystemAnalysis.qmd  control.analyze_controllability.qmd  control.analyze_observability.qmd  control.analyze_stability.qmd  control.design_kalman_filter.qmd  control.design_lqg.qmd  control.design_lqr.qmd  index.qmd  observers.ExtendedKalmanFilter.qmd  observers.LinearObserver.qmd  systems.base.core.ContinuousStochasticSystem.qmd  systems.base.core.ContinuousSymbolicSystem.qmd  systems.base.core.ContinuousSystemBase.qmd  systems.base.core.DiscreteStochasticSystem.qmd  systems.base.core.DiscreteSymbolicSystem.qmd  systems.base.core.DiscreteSystemBase.qmd  systems.base.core.DiscretizedSystem.qmd  systems.base.core.SymbolicSystemBase.qmd  systems.base.core.discretize.qmd  systems.base.numerical_integration.DiffraxIntegrator.qmd  systems.base.numerical_integration.IntegratorBase.qmd  systems.base.numerical_integration.IntegratorFactory.qmd  systems.base.numerical_integration.ScipyIntegrator.qmd  systems.base.numerical_integration.TorchDiffEqIntegrator.qmd  systems.base.numerical_integration.get_available_methods.qmd  systems.base.numerical_integration.get_implementing_library.qmd  systems.base.numerical_integration.get_method_info.qmd  systems.base.numerical_integration.is_fixed_step.qmd  systems.base.numerical_integration.is_sde_method.qmd  systems.base.numerical_integration.list_all_methods.qmd  systems.base.numerical_integration.normalize_method_name.qmd  systems.base.numerical_integration.stochastic.CustomBrownianPath.qmd  systems.base.numerical_integration.stochastic.DiffEqPySDEIntegrator.qmd  systems.base.numerical_integration.stochastic.DiffraxSDEIntegrator.qmd  systems.base.numerical_integration.stochastic.SDEIntegratorBase.qmd  systems.base.numerical_integration.stochastic.SDEIntegratorFactory.qmd  systems.base.numerical_integration.stochastic.TorchSDEIntegrator.qmd  systems.base.numerical_integration.stochastic.create_custom_or_random_brownian.qmd  (+184 more)
docs/architecture/: Control_Framework_Architecture.qmd  Delegation_Layer_Architecture.qmd  Integration_Framework_Architecture.qmd  Type_System_Architecture.qmd  UI_Framework_Architecture.qmd  Visualization_Framework_Architecture.qmd  cdesym_Design_Philosophy.qmd  index.qmd
docs/branch_docs/: CONTINUOUS_STOCHASTIC_DESIGN.md  DISCRETE_VS_CONTINUOUS_SIMULATE_COMPARISON.md  INTEGRATION_SIMULATION_METHODS_CATALOG.md  REFACTORING_IMPLEMENTATION_PLAN.md  REFACTORING_SUMMARY.md
docs/bug_fix_documentation/: dynamics_evaluator_bug_fix_summary.md
docs/tutorials/: basic_usage.qmd  index.qmd  installation.qmd
examples/: index.html
scripts/: convert_to_quarto.py  test_heun_implementation.py  test_pyproject.sh  test_quarto_docs.py
site_libs/bootstrap/: bootstrap-29a10792ab86ea717da89af8b9dc16a0.min.css  bootstrap-424c74f138fbbd09ab75a9fe865e5356.min.css  bootstrap-db9ed783aab5bf1f5c769f61b112e483.min.css
src/: __init__.py
src/control/: __init__.py  classical_control_functions.py  control_designer.py  control_synthesis.py  system_analysis.py
src/lyapunov_functions/: lyapunov_roa_visualization.py  roa_metrics.py
src/metrics_and_losses/: roa_metrics.py
src/observers/: __init__.py  ekf_observer.py  linear_observer.py
src/systems/: __init__.py
src/types/: __init__.py  backends.py  conformal.py  contraction.py  control_advanced.py  control_classical.py  core.py  estimation.py  flatness.py  identification.py  learning.py  linearization.py  optimization.py  protocols.py  reachability.py  robustness.py  symbolic.py  trajectories.py  types.py  utilities.py
src/visualization/: __init__.py  control_plots.py  phase_portrait.py  themes.py  trajectory_plotter.py
tests/: __init__.py  array_backend_test.py  backend_manager_test.py  backend_utils_test.py  codegen_utils_test.py  generic_discrete_time_system_test.py  linearization_engine_test.py  observation_engine_test.py  symbolic_dynamical_system_test.py  symbolic_validator_test.py
tests/core_class_unit_tests/: discrete_stochastic_system_test.py  stochastic_dynamical_system_test.py  symbolic_dynamical_system_test.py
tests/discretization_unit_tests/: discretizer_test.py
tests/integrator_unit_tests/: diffeqpy_integrator_test.py  diffrax_integrator_test.py  fixed_step_integrators_test.py  integrator_base_test.py  integrator_factory_test.py  scipy_integrator_test.py  test_autonomous_system_integration.py  torchdiffeq_integrator_test.py
tests/type_unit_tests/: contraction_test.py  control_classical_test.py  estimation_test.py  identification_test.py  learning_test.py  optimization_library_test.py
tutorials/: basic_usage.html  index.html  installation.html
(+315 files in other folders)
