# pyproject.toml

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control-ode-symulation"
version = "0.1.0"
description = "Library for constructing, describing, and utilizing systems of nonlinear ODEs for modeling dynamic processes in state-space control theory applications"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gil Benezer", email = "gil.benezer@gmail.com"}
]
keywords = [
    "control-theory",
    "dynamical-systems", 
    "symbolic-computation",
    "neural-networks",
    "lyapunov",
    "nonlinear-control",
    "multi-backend"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# CORE dependencies - minimum needed to use the library
dependencies = [
    "numpy>=2.0,<3.0",
    "sympy>=1.12",
    "scipy>=1.10",
    "torch>=2.0",
]

[project.optional-dependencies]
# JAX backend support
jax = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
]

# Visualization tools
viz = [
    "plotly>=5.0",
    "matplotlib>=3.5",
]

# Development and testing tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

# Jupyter notebook support
notebooks = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
]

# Control theory utilities (if you use the 'control' package)
control = [
    "control>=0.10",
]

# Everything for development
all = [
    "control-ode-symulation[jax,viz,dev,notebooks,control]",
]

[project.urls]
Homepage = "https://github.com/gbenezer/ControlODESymulation"
Repository = "https://github.com/gbenezer/ControlODESymulation"
Issues = "https://github.com/gbenezer/ControlODESymulation/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

# Alternative if using src/ layout properly:
# [tool.setuptools]
# package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Imported but unused

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sympy.*", "scipy.*", "plotly.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]