# pyproject.toml - ControlDESymulation Project Configuration

# ============================================================================
# BUILD SYSTEM
# ============================================================================
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# PROJECT METADATA
# ============================================================================
[project]
name = "controldesymulation"
dynamic = ["version"]
description = "Symbolic dynamical systems with multi-backend numerical execution for control theory, RL environments, and synthetic data generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Gil Benezer", email = "gil.benezer@gmail.com"}
]
maintainers = [
    {name = "Gil Benezer", email = "gil.benezer@gmail.com"}
]
keywords = [
    "control-theory",
    "dynamical-systems",
    "symbolic-computation",
    "state-space",
    "nonlinear-control",
    "reinforcement-learning",
    "lyapunov",
    "certificate-functions",
    "multi-backend",
    "pytorch",
    "jax",
    "synthetic-data",
    "sde",
    "ode"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Machine Learning",
    "Operating System :: OS Independent",
]

# ============================================================================
# CORE DEPENDENCIES (Required, torch planned to be made optional later)
# ============================================================================
dependencies = [
    "numpy>=2.0,<3.0",
    "sympy>=1.12",
    "scipy>=1.10",
    "torch>=2.0",
]

# ============================================================================
# OPTIONAL DEPENDENCIES
# ============================================================================
[project.optional-dependencies]

# PyTorch backend support (currently required but put here for future)
torch = [
    "torch>=2.0"
]

# JAX backend support (functional programming, JIT, TPU)
jax = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
]

# Visualization tools
viz = [
    "plotly>=5.0",
    "matplotlib>=3.5",
]

# Classical control theory utilities
control = [
    "control>=0.10",
]

# ODE/SDE numerical integrators
integrators = [
    "torchdiffeq>=0.2.3",    # PyTorch ODE
    "torchsde>=0.2.6",       # PyTorch SDE
    "diffrax>=0.6.0",        # JAX ODE/SDE (requires jax extra)
]

# Optimization libraries (MPC, trajectory optimization)
optimization = [
    "cvxpy>=1.4",            # Convex optimization
    # "casadi>=3.6",         # Nonlinear (large dependency, uncomment if needed)
]

# Development tools (testing, linting, type checking)
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.2",
    "pytest-benchmark>=4.0",
    "pytest-mock>=3.12",
    
    # Code quality
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.3",
    "mypy>=1.8",
    
    # Security
    "bandit>=1.7",
    "safety>=3.0",
    
    # Pre-commit
    "pre-commit>=3.6",
    
    # Type stubs
    "types-requests>=2.31",
    "types-setuptools>=69.0",
    
    # Build tools
    "build>=1.0",
    "twine>=5.0",
]

# Documentation generation
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=2.0",
]

# Jupyter notebook support
notebooks = [
    "jupyter>=1.0",
    "jupyterlab>=4.1",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "notebook>=7.1",
]

# Complete installation (all optional dependencies)
all = [
    "controldesymulation[jax,viz,control,integrators,optimization,dev,docs,notebooks]",
]

# ============================================================================
# PROJECT URLS
# ============================================================================
[project.urls]
Homepage = "https://github.com/gbenezer/ControlDESymulation"
Repository = "https://github.com/gbenezer/ControlDESymulation"
Issues = "https://github.com/gbenezer/ControlDESymulation/issues"
Documentation = "https://github.com/gbenezer/ControlDESymulation"
Changelog = "https://github.com/gbenezer/ControlDESymulation/blob/main/CHANGELOG.md"

# ============================================================================
# SETUPTOOLS CONFIGURATION
# ============================================================================
[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

# If you want to include package data (e.g., type stubs, data files)
[tool.setuptools.package-data]
src = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*"]

# Add this to include type information
[tool.setuptools.package-data]
src = ["py.typed", "*.pyi"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                          # Show summary of all test outcomes
    "--strict-markers",             # Enforce marker registration
    "--strict-config",              # Enforce config validation
    "--showlocals",                 # Show local variables in tracebacks
    "--tb=short",                   # Short traceback format
    "--cov=src",                    # Coverage for src directory
    "--cov-report=term-missing",    # Show missing lines in terminal
    "--cov-report=html",            # Generate HTML coverage report
    "--cov-report=xml",             # Generate XML coverage report (for CI)
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "jax: marks tests that require JAX",
    "torch: marks tests that require PyTorch",
]
# Increase timeout for slow tests
timeout = 600

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "pass",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BLACK CONFIGURATION (Code Formatting)
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
)/
'''

# ============================================================================
# ISORT CONFIGURATION (Import Sorting)
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true
known_first_party = ["src"]

# ============================================================================
# RUFF CONFIGURATION (Linting)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C90",    # mccabe complexity
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "S101",    # use of assert (okay in tests)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "TRY003",  # avoid long messages in exception strings
    "EM101",   # exception must not use string literal
    "FBT001",  # boolean positional arg in function definition
    "FBT002",  # boolean default positional argument in function
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Imported but unused
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused arguments okay in test fixtures
    "FBT",     # boolean args okay in tests
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Use numpy docstring style

# ============================================================================
# MYPY CONFIGURATION (Type Checking)
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = false  # Set to true when Phase 3 complete
disallow_any_generics = false  # Set to true when Phase 3 complete
disallow_untyped_calls = false # Set to true when Phase 3 complete
disallow_incomplete_defs = false # Set to true when Phase 3 complete
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "sympy.*",
    "scipy.*",
    "plotly.*",
    "torch.*",
    "jax.*",
    "control.*",
    "torchdiffeq.*",
    "torchsde.*",
    "diffrax.*",
    "cvxpy.*",
    "casadi.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# BANDIT CONFIGURATION (Security)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert and shell=True warnings in appropriate contexts

# ============================================================================
# ADDITIONAL TOOLS
# ============================================================================

# Pyright configuration (alternative to mypy)
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "build", "dist"]
pythonVersion = "3.9"
typeCheckingMode = "basic"

# Pylint configuration (if using instead of ruff)
[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]