# pyproject.toml - ControlDESymulation Project Configuration

# ============================================================================
# BUILD SYSTEM
# ============================================================================
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# PROJECT METADATA
# ============================================================================
[project]
name = "controldesymulation"
dynamic = ["version"]
description = "Symbolic dynamical systems with multi-backend numerical execution for control theory, RL environments, and synthetic data generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Gil Benezer", email = "gil.benezer@gmail.com"}
]
maintainers = [
    {name = "Gil Benezer", email = "gil.benezer@gmail.com"}
]
keywords = [
    "control-theory",
    "dynamical-systems",
    "symbolic-computation",
    "state-space",
    "nonlinear-control",
    "reinforcement-learning",
    "lyapunov",
    "certificate-functions",
    "multi-backend",
    "pytorch",
    "jax",
    "synthetic-data",
    "sde",
    "ode"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

# ============================================================================
# CORE DEPENDENCIES (Backend-agnostic, minimal requirements)
# ============================================================================
dependencies = [
    "numpy>=2.0,<3.0",           # NumPy backend + base array operations
    "sympy>=1.12,<2.0",          # Symbolic computation
    "scipy>=1.10,<2.0",          # Scientific computing utilities (1.14+ requires Python 3.10+)
    "pydantic>=2.5,<3.0",        # Data validation and settings
    "typing-extensions>=4.9,<5.0",  # Extended type hints
]

# ============================================================================
# OPTIONAL DEPENDENCIES
# ============================================================================
[project.optional-dependencies]

# PyTorch backend support (eager execution, autograd, GPU/CUDA)
torch = [
    "torch>=2.5,<3.0",
    "torchdiffeq>=0.2.3,<1.0",    # PyTorch ODE solvers
    "torchsde>=0.2.6,<1.0",       # PyTorch SDE solvers
]

# JAX backend support (functional programming, JIT, TPU, XLA)
jax = [
    "jax>=0.4.30,<1.0",
    "jaxlib>=0.4.30,<1.0",
    "jaxtyping>=0.2.0,<1.0",
    "equinox>=0.11.0,<1.0",
    "diffrax>=0.6.0,<1.0",
    "optimistix>=0.0.8,<1.0",
    "lineax>=0.0.5,<1.0",
]

# Visualization tools
viz = [
    "plotly>=5.18,<6.0",
    "matplotlib>=3.8,<4.0",
]

# Classical control theory utilities
control = [
    "control>=0.10,<1.0",
]

# Julia integration for DifferentialEquations.jl
julia = [
    "diffeqpy>=2.4.0,<3.0",
    "juliacall>=0.9.0,<1.0",
    "juliapkg>=0.1.0,<1.0",
]

# Optimization libraries (MPC, trajectory optimization)
optimization = [
    "cvxpy>=1.4,<2.0",           # Convex optimization
    "clarabel>=0.9.0,<1.0",      # CVXPY solver
    "osqp>=0.6.0,<1.0",          # CVXPY solver
    "scs>=3.2.0,<4.0",           # CVXPY solver
    "casadi>=3.6,<4.0",          # Nonlinear optimization
]

# Development tools (testing, linting, type checking)
dev = [
    # Testing
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<8.0",
    "pytest-xdist>=3.5,<4.0",
    "pytest-timeout>=2.2,<3.0",
    "pytest-benchmark>=4.0,<6.0",
    "pytest-mock>=3.12,<4.0",
    "coverage>=7.4,<8.0",
    "mutmut>=3.0,<4.0",
    
    # Code quality
    "black>=24.0,<26.0",
    "isort>=5.13,<6.0",
    "ruff>=0.3,<1.0",
    "mypy>=1.8,<2.0",
    "mypy-extensions>=1.0,<2.0",
    
    # Additional linting
    "flake8>=7.0,<8.0",
    "pylint>=3.0,<5.0",
    
    # Security
    "bandit>=1.7,<2.0",
    "safety>=3.0,<4.0",
    
    # Pre-commit (optional - comment out if causing issues)
    "pre-commit>=3.6,<4.0",
    
    # Code analysis (optional - comment out if causing issues)
    "radon>=6.0,<7.0",
    "pydeps>=2.0,<4.0",
    
    # Type stubs
    "types-requests>=2.31",
    "types-setuptools>=69.0",
    
    # Build tools
    "build>=1.0,<2.0",
    "twine>=5.0,<7.0",
    "setuptools>=69.0,<81.0",
    "wheel>=0.42.0,<1.0",
]

# Documentation generation
docs = [
    "sphinx>=7.2,<9.0",
    "sphinx-rtd-theme>=2.0,<4.0",
    "sphinx-autodoc-typehints>=2.0,<4.0",
    "myst-parser>=2.0,<4.0",
]

# Jupyter notebook support
notebooks = [
    "jupyter>=1.0,<2.0",
    "jupyterlab>=4.0,<5.0",
    "ipykernel>=6.29,<8.0",
    "ipywidgets>=8.1,<9.0",
    "notebook>=7.0,<8.0",
    "ipython>=8.20,<10.0",
]

# Interactive CLI tools
cli = [
    "rich>=13.7,<15.0",
    "textual>=0.50,<1.0",
    "typer>=0.9,<1.0",
]

# Complete installation (all optional dependencies)
all = [
    "controldesymulation[torch,jax,viz,control,julia,optimization,dev,docs,notebooks,cli]",
]

# ============================================================================
# PROJECT URLS
# ============================================================================
[project.urls]
Homepage = "https://github.com/gbenezer/ControlDESymulation"
Repository = "https://github.com/gbenezer/ControlDESymulation"
Issues = "https://github.com/gbenezer/ControlDESymulation/issues"
Documentation = "https://github.com/gbenezer/ControlDESymulation"
Changelog = "https://github.com/gbenezer/ControlDESymulation/blob/main/CHANGELOG.md"

# ============================================================================
# SETUPTOOLS CONFIGURATION
# ============================================================================
[tool.setuptools]
# Don't specify packages directly, use packages.find instead

[tool.setuptools.package-dir]
"" = "."

# Automatically find packages
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*"]

# Include package data (type stubs, data files)
[tool.setuptools.package-data]
src = ["py.typed", "*.pyi"]

# Dynamic version from __version__.py
[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                          # Show summary of all test outcomes
    "--strict-markers",             # Enforce marker registration
    "--strict-config",              # Enforce config validation
    "--showlocals",                 # Show local variables in tracebacks
    "--tb=short",                   # Short traceback format
    "--cov=src",                    # Coverage for src directory
    "--cov-report=term-missing",    # Show missing lines in terminal
    "--cov-report=html",            # Generate HTML coverage report
    "--cov-report=xml",             # Generate XML coverage report (for CI)
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "jax: marks tests that require JAX",
    "torch: marks tests that require PyTorch",
    "julia: marks tests that require Julia integration",
]
# Increase timeout for slow tests
timeout = 900

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "pass",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BLACK CONFIGURATION (Code Formatting)
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
)/
'''

# ============================================================================
# ISORT CONFIGURATION (Import Sorting)
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true
known_first_party = ["src"]

# ============================================================================
# RUFF CONFIGURATION (Linting)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C90",    # mccabe complexity
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "S101",    # use of assert (okay in tests)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "TRY003",  # avoid long messages in exception strings
    "EM101",   # exception must not use string literal
    "FBT001",  # boolean positional arg in function definition
    "FBT002",  # boolean default positional argument in function
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Imported but unused
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused arguments okay in test fixtures
    "FBT",     # boolean args okay in tests
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Use numpy docstring style

# ============================================================================
# MYPY CONFIGURATION (Type Checking)
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = false  # Set to true when Phase 3 complete
disallow_any_generics = false  # Set to true when Phase 3 complete
disallow_untyped_calls = false # Set to true when Phase 3 complete
disallow_incomplete_defs = false # Set to true when Phase 3 complete
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "sympy.*",
    "scipy.*",
    "plotly.*",
    "torch.*",
    "jax.*",
    "jaxlib.*",
    "jaxtyping.*",
    "equinox.*",
    "diffrax.*",
    "optimistix.*",
    "lineax.*",
    "control.*",
    "torchdiffeq.*",
    "torchsde.*",
    "cvxpy.*",
    "casadi.*",
    "diffeqpy.*",
    "juliacall.*",
    "juliapkg.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# BANDIT CONFIGURATION (Security)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert and shell=True warnings in appropriate contexts

# ============================================================================
# ADDITIONAL TOOLS
# ============================================================================

# Pyright configuration (alternative to mypy)
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "build", "dist"]
pythonVersion = "3.9"
typeCheckingMode = "basic"

# Pylint configuration (if using instead of ruff)
[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]